# Artceleration-EEE598-Assn2

./: build.gradle
artceleration_app/: artceleration_app-release.apk
artceleration_app/src/main/java/edu/asu/msrs/artceleration/: ArtView.java  MainViewer.java
artcelerationlibrary/: CMakeLists.txt  build.gradle
artcelerationlibrary/src/main/: AndroidManifest.xml
artcelerationlibrary/src/main/cpp/: CMakeLists.txt  helloneon-intrinsics.c  helloneon-intrinsics.h  helloneon.c  native-lib.cpp  native-lib.h
artcelerationlibrary/src/main/java/edu/asu/msrs/artcelerationlibrary/: ArtLib.java  ArtTransformService.java  AsciiArt.java  ColorFilter.java  GaussianBlur.java  GaussianBlurByte.java  MotionBlur.java  NeonEdges.java  ReqArgs.java  SobelEdge.java  TiltShift.java
exportToHTML/edu/asu/msrs/artcelerationlibrary/: ArtLib.java.html
